src/components/Navigation/style.css
.navbar-dark {
  background-color: #413256 !important;
  padding-top: 2.45rem;
  padding-bottom: 2.45rem;
}

.my-name, .nav-link {
  color: #f5f5f5 !important;
  font-size: 1.5rem;
  text-align: right;
}

.nav-link:focus, .nav-link:hover, .nav-link.active {
  color: #f5f5f5 !important;
  opacity: 0.5;
}

@media (min-width: 576px) {
  .navbar-dark {
    padding-top: 1.25rem;
    padding-bottom: 1.25rem;
  }
  .my-name, .nav-link {
    font-size: 1.75rem;
  }
  .my-name {
    margin-left: 1rem;
  }
  .link-name {
    margin-right: 1rem;
  }
}

@media (min-width: 768px) {
  .navbar-dark {
    padding-top: 2.45rem;
    padding-bottom: 2.45rem;
  }
  .my-name, .nav-link {
    font-size: 2rem;
  }
  .my-name {
    margin-left: 1.5rem;
  }
  .link-name {
    margin-right: 1.5rem;
  }
}

@media (min-width: 992px) {
  .navbar-dark {
    padding-top: 3.125rem;
    padding-bottom: 3.125rem;
  }
  .my-name, .nav-link {
    font-size: 2.5rem;
  }
  .my-name {
    margin-left: 1.75rem;
  }
  .link-name {
    margin-right: 1.75rem;
  }
}

@media (min-width: 1200px) {
  .navbar-dark {
    padding-top: 4.063rem;
    padding-bottom: 4.063rem;
  }
  .my-name, .nav-link {
    font-size: 3.75rem;
  }
  .my-name {
    margin-left: 2rem;
  }
  .link-name {
    margin-right: 2rem;
  }
}

